fix date, remove zips

--- a/extensionDirectory/filings.html
+++ b/extensionDirectory/filings.html
@@ -1379,7 +1379,7 @@
                               <br />
                               <p>
                                 Sworn to and subscribed before me this ______
-                                day of ________________, _____ by
+                                day of ________________, _______ by
                                 {{petitioner.name}}, who acknowledged the
                                 execution of the foregoing AFFIDAVIT IN SUPPORT
                                 OF MOTION TO WAIVE LEGAL FINANCIAL OBLIGATIONS
@@ -1388,7 +1388,9 @@
                               <br /><br />
                               <p>_____________________________</p>
                               <p>Notary Public</p>
-                              <p>My Commission Expires January 31, 2021.</p>
+                              <p>
+                                My Commission Expires {{getNextNotaryDate()}}.
+                              </p>
                             </div>
                           </template>
                         </div>
