--- a/extensionDirectory/popup.html
+++ b/extensionDirectory/popup.html
@@ -51,6 +51,7 @@
         </div>
         <div class="popup-edition-wrap">
           <p class="popup-edition">ExpungeVT 4.0 - Co-counsel Edition</p>
+          <p class="popup-edition-sub">Expunge Harder. Expunge Smarter.</p>
         </div>
         <div class="inset text-center button-div">
           <button
