remove break on checkout sheet

--- a/extensionDirectory/filings.html
+++ b/extensionDirectory/filings.html
@@ -310,7 +310,7 @@
                                 {{group.county}} county.</span
                               ><span
                                 v-if="numOfFeeWaiversInGroup(group.filings) > 1"
-                                ><br />{{numOfFeeWaiversInGroup(group.filings)}}
+                                >{{numOfFeeWaiversInGroup(group.filings)}}
                                 fee waivers for {{group.county}} county and an
                                 affidavit for each.</span
                               >
