file settings check functioning and herby typo fixed

--- a/extensionDirectory/filings.html
+++ b/extensionDirectory/filings.html
@@ -659,7 +659,7 @@
                               class="email-test"
                               v-if="settings.emailConsent"
                               ><br /><br />By signing this notice of appearance
-                              below, I herby agree to the acceptance of all
+                              below, I hereby agree to the acceptance of all
                               electronic filings at the following email address:
                               <b>{{petitioner.email}}</b>.</span
                             >
