--- a/extensionDirectory/disclaimer.html
+++ b/extensionDirectory/disclaimer.html
@@ -31,7 +31,7 @@
         is provided for general informational purposes only. Information
         obtained through ExpungeVT does not constitute the most up-to-date legal
         or other information and should be verified with a more direct source of
-        legal of legal or factual authority. ExpungeVT contains links to other
+        legal or factual authority. ExpungeVT contains links to other
         third-party websites. Such links are only for the convenience of the
         user. The Contributors and their members do not recommend or endorse the
         contents of the third-party sites.
