Get manage counts working, load gumshoe via require

--- a/extensionDirectory-build/filings.html
+++ b/extensionDirectory-build/filings.html
@@ -3,6 +3,8 @@
   <head>
     <title>Petitions</title>
 
+    <link href="index.css" rel="stylesheet" />
+
     <!-- Bootstrap -->
     <script src="./node_modules/bootstrap4-toggle/js/bootstrap4-toggle.min.js"></script>
     <link
