--- a/extensionDirectory-build/manage-counts.html
+++ b/extensionDirectory-build/manage-counts.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <title>Add and Edit Counts</title>
-    <link href="index.css" rel="stylesheet" type="text/css" />
+    <link href="index.css" rel="stylesheet" />
 
     <!-- Smooth-Scroll -->
     <script src="./node_modules/smooth-scroll/dist/smooth-scroll.polyfills.min.js"></script>
@@ -265,5 +265,6 @@
       </section>
     </div>
 
+    <script id="script" src="index.js"></script>
   </body>
 </html>
