--- a/extensionDirectory-build/filings.html
+++ b/extensionDirectory-build/filings.html
@@ -5,23 +5,13 @@
 
     <link href="index.css" rel="stylesheet" />
 
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css" integrity="sha512-L7MWcK7FNPcwNqnLdZq86lTHYLdQqZaz5YcAgE+5cnGmlw8JT03QB2+oxL100UeB6RlzZLUxCGSS4/++mNZdxw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+
     <!-- Bootstrap -->
     <script src="./node_modules/bootstrap4-toggle/js/bootstrap4-toggle.min.js"></script>
     <link
       href="./node_modules/bootstrap4-toggle/css/bootstrap4-toggle.min.css"
       rel="stylesheet"
-    />
-
-    <!-- Smooth-Scroll -->
-    <script src="./node_modules/smooth-scroll/dist/smooth-scroll.polyfills.min.js"></script>
-
-    <!-- Gumshoe -->
-    <script src="./node_modules/gumshoejs/dist/gumshoe.polyfills.min.js"></script>
-
-    <!-- font awesome -->
-    <link
-      rel="stylesheet"
-      href="./node_modules/@fortawesome/fontawesome-free/css/all.css"
     />
   </head>
 
