--- a/extensionDirectory-build/popup.html
+++ b/extensionDirectory-build/popup.html
@@ -1,18 +1,10 @@
 <!DOCTYPE html>
 <html>
   <head>
+
     <link rel="stylesheet" href="index.css" />
-    <!-- font awesome -->
-    <link
-      rel="stylesheet"
-      href="./node_modules/@fortawesome/fontawesome-free/css/all.css"
-    />
 
-    <!-- Smooth-Scroll -->
-    <script src="./node_modules/smooth-scroll/dist/smooth-scroll.polyfills.min.js"></script>
-
-    <!-- Gumshoe -->
-    <script src="./node_modules/gumshoejs/dist/gumshoe.polyfills.min.js"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css" integrity="sha512-L7MWcK7FNPcwNqnLdZq86lTHYLdQqZaz5YcAgE+5cnGmlw8JT03QB2+oxL100UeB6RlzZLUxCGSS4/++mNZdxw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
   </head>
 
   <body>
